# QJsonVariant

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  QJsonVariant  qcborparser.cpp  qcborparser.h  qcborvariantreader.cpp  qcborvariantreader.h  qcborvariantwriter.cpp  qcborvariantwriter.h  qcborwriter.cpp  qcborwriter.h  qjsonparser.cpp  qjsonparser.h  qjsonvariantreader.cpp  qjsonvariantreader.h  qjsonvariantwriter.cpp  qjsonvariantwriter.h  qjsonwriter.cpp  qjsonwriter.h  qutf8.h  qvariantreader.cpp  qvariantreader.h
test/: tst_jsoncbor.cpp
tests/: CMakeLists.txt
tests/cbor/: CMakeLists.txt  tst_cbor.cpp
tests/json/: CMakeLists.txt  test.json  test4.json  tst_json.cpp
